# tatarajo

./: COPYRIGHT  Cargo.toml  README.md  justfile
.config/: nextest.toml
.github/workflows/: ci.yaml
crates/sabiniwm/: Cargo.toml
crates/sabiniwm-chocomint/: Cargo.toml
crates/sabiniwm-chocomint/src/: main.rs
crates/sabiniwm-pistachio/: Cargo.toml
crates/sabiniwm-pistachio/src/: main.rs
crates/sabiniwm-smallvil-based/: Cargo.toml
crates/sabiniwm-smallvil-based/src/: action.rs  main.rs  state.rs
crates/sabiniwm-smallvil-based/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
crates/sabiniwm-smallvil-based/src/view/: predefined.rs  stackset.rs  view.rs  window.rs
crates/sabiniwm/src/: action.rs  drawing.rs  envvar.rs  external_trait_def.rs  focus.rs  input_event.rs  input_handler.rs  lib.rs  pointer.rs  render.rs  render_loop.rs  state.rs  state_delegate.rs  udev.rs  winit.rs
crates/sabiniwm/src/action/: action.rs  predefined.rs
crates/sabiniwm/src/backend/: mod.rs  udev.rs  winit.rs
crates/sabiniwm/src/input/: keymap.rs  keyseq.rs  mod.rs
crates/sabiniwm/src/model/: grid_geometry.rs  mod.rs
crates/sabiniwm/src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
crates/sabiniwm/src/util/: mod.rs  panic.rs
crates/sabiniwm/src/view/: api.rs  layout_node.rs  predefined.rs  window.rs
crates/tatarajo/: Cargo.toml
crates/tatarajo-chocomint/: Cargo.toml
crates/tatarajo-chocomint/src/: main.rs
crates/tatarajo-pistachio/: Cargo.toml
crates/tatarajo-pistachio/src/: main.rs
crates/tatarajo/src/: envvar.rs  external_trait_def.rs  focus.rs  input_event.rs  input_handler.rs  lib.rs  render_loop.rs  state.rs  state_delegate.rs  wl_global.rs
crates/tatarajo/src/action/: action.rs  mod.rs  predefined.rs
crates/tatarajo/src/backend/: mod.rs  udev.rs  winit.rs
crates/tatarajo/src/shell/: mod.rs  x11.rs  xdg.rs
crates/tatarajo/src/util/: focused_vec.rs  mod.rs
crates/tatarajo/src/view/: api.rs  layout_node.rs  predefined.rs  view.rs  window.rs
src/: action.rs  command.rs  cursor.rs  focus.rs  input.rs  input_event.rs  input_handler.rs  lib.rs  main.rs  render.rs  state.rs  state_delegate.rs  udev.rs  winit.rs  x11.rs
src-smallvil-based/grabs/: move_grab.rs
src-smallvil-based/input/: keyseq.rs
src-smallvil-based/view/: mod.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/model/: grid_geometry.rs
src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
src/util/: focused_vec.rs  id.rs  mod.rs
src/view/: api.rs  layout_node.rs  predefined.rs  stackset.rs  view.rs  window.rs
