[package]
name = "sabiniwm"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = "2.2.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "8e49b9b"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
