[package]
name = "sabiniwm"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
big_s = "1.0.2"
bitflags = "2.2.1"
itertools = "0.12.1"
maplit = "1.0.2"
time = { version = "0.3.34", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "std", "time"] }
xkbcommon = "0.7.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "8e49b9b"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]

[dev-dependencies]
rstest = "0.18.2"
