[package]
name = "sabiniwm"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
big_s = "1.0.2"
bitflags = "2.2.1"
downcast = "0.11.0"
dyn-clone = "1.0.17"
fps_ticker = { version = "1.0.0", optional = true }
image = { version = "0.25.1", default-features = false, optional = true }
itertools = "0.12.1"
maplit = "1.0.2"
renderdoc = { version = "0.11.0", optional = true }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "8e49b9b", optional = true }
thin_delegate = "0.0.1"
thiserror = "1.0.60"
tracing = "0.1.40"
wayland-server = { version = "0.31.0" }
x11rb = { version = "0.12.0", optional = true, default-features = false, features = ["composite"] }
xcursor = {version = "0.3.3", optional = true }
xkbcommon = "0.7.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "8e49b9b"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]

[dev-dependencies]
rstest = "0.18.2"

[features]
default = ["egl", "winit", "udev", "xwayland"]
debug = ["fps_ticker", "image/png", "renderdoc"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
renderer_sync = []
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
