[package]
name = "sabiniwm"
version = "0.0.0"
edition = "2021"

[dependencies]
big_s = "1.0.2"
bitflags = "2.2.1"
derive_more = { version = "1.0.0", features = ["from"] }
downcast = "0.11.0"
dyn-clone = "1.0.17"
envy = "0.4.2"
eyre = "0.6.12"
itertools = "0.12.1"
maplit = "1.0.2"
serde = { version = "1.0.213", features = ["derive"] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "8e49b9b", optional = true }
thin_delegate = "0.0.3"
thiserror = "1.0.60"
tracing = "0.1.40"
wayland-server = { version = "0.31.0" }
x11rb = { version = "0.12.0", optional = true, default-features = false, features = ["composite"] }
xcursor = {version = "0.3.3", optional = true }
xkbcommon = "0.7.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "8e49b9b"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]

[dev-dependencies]
rstest = "0.18.2"

[features]
default = ["egl", "udev_deps", "winit", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
# Only enables additional feature flags and doesn't affect to code.
udev_deps = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
